force-app/main/default/objects/COMM_OrderVouchers__e/COMM_OrderVouchers__e.object-meta.xml
<CustomObject>
    <description>Order Voucher Platform Event stating the voucher can be downloaded or published to external systems</description>
    <label>Order Voucher</label>
    <pluralLabel>Order Vouchers</pluralLabel>
</CustomObject>