force-app/main/default/objects/COMM_OrderVouchers__e/fields/COMM_OrderId__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderId__c</fullName>
    <description>Reseller Order Id</description>
    <label>Order Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>