force-app/main/default/objects/COMM_OrderVouchers__e/fields/COMM_OrderLines__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderLines__c</fullName>
    <description>JSON structure with order Line Details.</description>
    <label>Order Lines</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>