force-app/main/default/objects/COMM_OrderVouchers__e/fields/COMM_OrderSummaryId__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderSummaryId__c</fullName>
    <description>OrderSummary object id</description>
    <label>Order Summary Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>