force-app/main/default/objects/COMM_OrderVouchers__e/fields/COMM_ResellerId__c.field-meta.xml
<CustomField>
    <fullName>COMM_ResellerId__c</fullName>
    <description>Account Reseller Id.</description>
    <label>Reseller Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>