force-app/main/default/objects/COMM_OrderVouchers__e/fields/COMM_SalesforceOrderId__c.field-meta.xml
<CustomField>
    <fullName>COMM_SalesforceOrderId__c</fullName>
    <description>Salesforce Order Id (COMM_ResellerId__c concatenated with COMM_OrderId__c, separated by “-”</description>
    <label>Salesforce Order Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>